--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,19 @@
   "name": "vmanyushin/yii2-logzio",
   "description": "Yii2 library for logging to logz.io",
   "type": "yii2-extension",
+  "keywords": [
+    "yii",
+    "extension",
+    "log"
+  ],
+  "homepage": "https://github.com/vmanyushin/yii2-logzio",
+  "support": {
+    "issues": "https://github.com/vmanyushin/yii2-logzio/issues",
+    "source": "https://github.com/vmanyushin/yii2-logzio"
+  },
   "require": {
+    "php": ">=5.6.0",
+    "yiisoft/yii2": "~2.0.0",
     "lordoffreak/elastica-logzio": "^1.0"
   },
   "require-dev": {
